# synq

./: Cargo.toml  README.md  build.rs
rustnett/: Cargo.toml
rustnett/src/: base.rs  config.rs  lib.rs  protocol.rs
src/: axon.rs  lib.rs  rpc.rs  sign.rs  wallet.rs  weights.rs
src/rpc/: mod.rs
