[package]
name = "bittensor-subnet-library"
version = "0.1.0"
edition = "2021"
description = "A library for creating Bittensor subnets"
license = "MIT"

[dependencies]
subxt = { version = "0.38.0", features = ["substrate-compat"] }
anyhow = "1.0"
hex = "0.4"
parity-scale-codec = { version = "3.0.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0"

[build-dependencies]
tokio = { version = "1.0", features = ["full"] }
subxt-codegen = "0.38.0"
subxt-metadata = "0.38.0"
subxt-utils-fetchmetadata = { version = "0.38.0", features = ["url"] }
parity-scale-codec = "3.0.0"
