[package]
name = "synq"
version = "0.0.1"
edition = "2021"
description = "A library for creating Bittensor subnets"
license = "MIT"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
subxt = { version = "0.38.0", features = ["substrate-compat"] }
hex = "0.4"
parity-scale-codec = { version = "3.7.4", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
dirs = "6.0.0"

[build-dependencies]
tokio = { version = "1.44.1", features = ["full"] }
subxt-codegen = "0.38.0"
subxt-metadata = "0.38.0"
subxt-utils-fetchmetadata = { version = "0.38.0", features = ["url"] }
parity-scale-codec = "3.0.0"
